[tool.poetry]
name = "logger-example"
version = "0.1.0"
description = "simple logger"
authors = [" Maksim Kicherov <kicherov@itpc.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
